<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:orientation="vertical"
    android:scrollbarFadeDuration="0"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_h"
            android:layout_marginTop="@dimen/settings_margin_top"
            android:background="@drawable/bg_scene_play_msg_shape"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/settings_item_w"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize="@dimen/settings_title_size"></TextView>

            <TextView
                android:id="@+id/version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_margin"
                android:layout_weight="4"
                android:textSize="@dimen/settings_title_size"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_h"
            android:layout_marginTop="@dimen/settings_margin_top"
            android:background="@drawable/bg_scene_play_msg_shape"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/settings_item_w"
                android:layout_height="wrap_content"
                android:text="@string/backlight"
                android:textSize="@dimen/settings_title_size"></TextView>

            <SeekBar
                android:id="@+id/backlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_margin"
                android:layout_marginRight="@dimen/settings_margin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_h"
            android:layout_marginTop="@dimen/settings_margin_top"
            android:background="@drawable/bg_scene_play_msg_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/settings_item_w"
                android:layout_height="wrap_content"
                android:text="@string/admin_update_version"
                android:textSize="@dimen/settings_title_size"></TextView>

            <Button
                android:id="@+id/update_os"
                android:layout_width="@dimen/settings_button_w"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_margin"
                android:layout_weight="1"
                android:text="@string/admin_update_os"
                android:visibility="gone" />

            <Button
                android:id="@+id/update_mcu"
                android:layout_width="@dimen/settings_button_w"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_margin"
                android:layout_weight="1"
                android:text="@string/admin_update_mcu" />

            <Button
                android:id="@+id/update_app_u"
                android:layout_width="@dimen/settings_button_w"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_margin"
                android:layout_weight="1"
                android:text="@string/admin_update_apku" />

            <Button
                android:id="@+id/update_app_online"
                android:layout_width="@dimen/settings_button_w"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_margin"
                android:layout_weight="1"
                android:text="@string/admin_update_apk_online"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_h"
            android:layout_marginTop="@dimen/settings_margin_top"
            android:background="@drawable/bg_scene_play_msg_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/settings_item_w"
                android:layout_height="wrap_content"
                android:text="@string/setting_slope_calibration"
                android:textSize="@dimen/settings_title_size"></TextView>

            <Button
                android:id="@+id/start_calibration"
                android:layout_width="@dimen/settings_button_w"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_margin"
                android:layout_weight="1"
                android:text="@string/start_slope_calibration" />

            <ProgressBar
                android:id="@+id/calibration_progress"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/settings_title_size"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/calibration_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/settings_title_size"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_h"
            android:layout_marginTop="@dimen/settings_margin_top"
            android:background="@drawable/bg_scene_play_msg_shape"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/settings_item_w"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/admin_third_app_install_manager"
                android:textSize="@dimen/settings_title_size" />

            <RadioGroup
                android:id="@+id/app_install_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/app_install_ban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/admin_third_app_install_ban" />

                <RadioButton
                    android:id="@+id/app_install_allow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:text="@string/admin_third_app_install_allow" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_h"
            android:layout_marginTop="@dimen/settings_margin_top"
            android:background="@drawable/bg_scene_play_msg_shape"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/settings_item_w"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/admin_detectperson"
                android:textSize="@dimen/settings_title_size" />

            <RadioGroup
                android:id="@+id/detectperson_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/detectperson_ban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/admin_third_app_install_ban" />

                <RadioButton
                    android:id="@+id/detectperson_allow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:text="@string/admin_third_app_install_allow" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_h"
            android:layout_marginTop="@dimen/settings_margin_top"
            android:background="@drawable/bg_scene_play_msg_shape"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/settings_item_w"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/admin_erp"
                android:textSize="@dimen/settings_title_size" />

            <RadioGroup
                android:id="@+id/erp_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/erp_ban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/admin_third_app_install_ban" />

                <RadioButton
                    android:id="@+id/erp_allow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:text="@string/admin_third_app_install_allow" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_h"
            android:layout_marginTop="@dimen/settings_margin_top"
            android:background="@drawable/bg_scene_play_msg_shape"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/settings_item_w"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/admin_test"
                android:textSize="@dimen/settings_title_size" />

            <RadioGroup
                android:id="@+id/test_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/test_ban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/admin_close" />

                <RadioButton
                    android:id="@+id/test_allow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:text="@string/admin_open" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_h"
            android:layout_marginTop="@dimen/settings_margin_top"
            android:background="@drawable/bg_scene_play_msg_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/settings_item_w"
                android:layout_height="wrap_content"
                android:text="@string/settings_restore"
                android:textSize="@dimen/settings_title_size"></TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/enter_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_reset" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>