<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:workout="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.tapc.platform.ui.view.WorkoutText
            android:id="@+id/time"
            android:layout_width="@dimen/main_icon1_with"
            android:layout_height="@dimen/main_icon1_height"
            android:background="@drawable/bg_time"
            workout:titleName="@string/goaltime"
            workout:unitName="min"/>

        <com.tapc.platform.ui.view.WorkoutText
            android:id="@+id/heart"
            android:layout_width="@dimen/main_icon1_with"
            android:layout_height="@dimen/main_icon1_height"
            android:layout_marginTop="@dimen/main_item_top_margin"
            android:background="@drawable/bg_heart_rate"
            workout:titleName="@string/heart"
            workout:unitName="min"/>

        <com.tapc.platform.ui.view.DeviceCtl
            android:id="@+id/inclineCtrl"
            android:layout_width="@dimen/main_icon1_with"
            android:layout_height="@dimen/main_icon1_height"
            android:layout_marginTop="@dimen/main_item_top_margin"
            android:background="@drawable/bg_incline"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_line1_left_margin"
        android:orientation="vertical">

        <com.tapc.platform.ui.view.WorkoutText
            android:id="@+id/distance"
            android:layout_width="@dimen/main_icon1_with"
            android:layout_height="@dimen/main_icon1_height"
            android:background="@drawable/btn_distence"
            workout:titleName="@string/goaldistance"
            workout:unitName="km"/>

        <com.tapc.platform.ui.view.WorkoutGoal
            android:id="@+id/workout_goal"
            android:layout_width="@dimen/main_icon1_with"
            android:layout_height="@dimen/main_icon1_height"
            android:layout_marginTop="@dimen/main_item_top_margin"/>

        <Button
            android:id="@+id/stopButton"
            android:layout_width="@dimen/main_icon1_with"
            android:layout_height="@dimen/main_icon1_height2"
            android:layout_marginTop="@dimen/main_item_top_margin"
            android:background="@drawable/btn_stop"
            android:text="@string/stop"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_tx_size"/>

        <FrameLayout
            android:layout_width="@dimen/main_icon1_with"
            android:layout_height="@dimen/main_icon1_height2"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/main_item_top_margin">

            <Button
                android:id="@+id/pauseButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_pause"
                android:text="@string/pause"
                android:textColor="@android:color/white"
                android:textSize="@dimen/main_tx_size"/>

            <Button
                android:id="@+id/resumeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_pause"
                android:text="@string/start"
                android:textColor="@android:color/white"
                android:textSize="@dimen/main_tx_size"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_line1_left_margin"
        android:orientation="vertical">

        <com.tapc.platform.ui.view.WorkoutText
            android:id="@+id/calorie"
            android:layout_width="@dimen/main_icon1_with"
            android:layout_height="@dimen/main_icon1_height"
            android:background="@drawable/btn_calorle"
            workout:titleName="@string/goalcalorie"
            workout:unitName="kcal"/>

        <com.tapc.platform.ui.view.WorkoutText
            android:id="@+id/altitude"
            android:layout_width="@dimen/main_icon1_with"
            android:layout_height="@dimen/main_icon1_height"
            android:layout_marginTop="@dimen/main_item_top_margin"
            android:background="@drawable/bg_altitude"
            workout:titleName="@string/altitude"
            workout:unitName="km"/>

        <com.tapc.platform.ui.view.DeviceCtl
            android:id="@+id/speedCtrl"
            android:layout_width="@dimen/main_icon1_with"
            android:layout_height="@dimen/main_icon1_height"
            android:layout_marginTop="@dimen/main_item_top_margin"
            android:background="@drawable/bg_speed"/>
    </LinearLayout>
</LinearLayout>